[gd_scene load_steps=5 format=3 uid="uid://2jyyp7quo6jq"]

[ext_resource type="Script" uid="uid://bk2lo8bac3xj0" path="res://scripts/gui/level_card.gd" id="1_ilvye"]
[ext_resource type="Texture2D" uid="uid://h3vrnsuuxdjx" path="res://assets/images/objects/collectable.png" id="2_ajwr0"]
[ext_resource type="Texture2D" uid="uid://kgr03xanuw8t" path="res://assets/images/level_cards/temp_level_card.png" id="2_iirib"]

[sub_resource type="LabelSettings" id="LabelSettings_ajwr0"]
font_size = 31
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="LevelCard" type="Control"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_right = -752.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ilvye")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(520, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 364.0
grow_horizontal = 2
alignment = 1

[node name="PreviewImage" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
texture = ExtResource("2_iirib")
expand_mode = 5
stretch_mode = 5

[node name="Collectables" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
alignment = 1
last_wrap_alignment = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer/Collectables"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_ajwr0")
expand_mode = 2
stretch_mode = 6

[node name="BestTime" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Text" type="Label" parent="VBoxContainer/BestTime"]
layout_mode = 2
size_flags_horizontal = 6
text = "Best Time:"

[node name="Value" type="Label" parent="VBoxContainer/BestTime"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6

[node name="LevelName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "LEVEL NAME"
label_settings = SubResource("LabelSettings_ajwr0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
z_index = -1
custom_minimum_size = Vector2(520, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
size_flags_vertical = 3
